--- a/default.cfg
+++ b/default.cfg
@@ -1,4 +1,5 @@
 SQLALCHEMY_DATABASE_URI = 'sqlite:///main.db'
+SQLALCHEMY_TRACK_MODIFICATIONS = False
 
 GITOLITE_ADMIN_DIR = 'gitolite-admin'
 GITOLITE_DOMAIN = 'localhost'
